Fix port detail bug on smaller screens

--- a/style/style.css
+++ b/style/style.css
@@ -30,7 +30,7 @@ nav{
     position: fixed;
     width: 100%;
     z-index: 2;
-    height: 4.5em;
+    height: 4em;
     display: grid;
     grid-template-columns: 14em 1fr;
     align-items: center;
@@ -39,14 +39,13 @@ nav{
 }
 /* --------LOGO--------- */
 .logo{
-    margin-left: 0.5em;
+    margin-left: .25em;
     padding: 0 .25em;
     font-size: 1.75em;
     font-weight: 700;
     color: rgb(44, 62, 80);
     text-decoration: none;
     border: 4px solid;
-    box-shadow: 3px 3px rgba(44, 62, 80, .75);
 }
 
 .logo:hover{
@@ -172,7 +171,6 @@ nav{
     text-decoration: none;
     color: white;
     border: solid;
-    box-shadow: 3px 3px rgba(255, 255, 255, 0.5);
     padding: 0.3em
 }
 
@@ -192,7 +190,8 @@ nav{
 
 .abouttext {
     padding: 0 2em 1em;
-    border:solid;
+    border:solid 5px white;;
+    box-shadow: 5px 5px rgba(255, 255, 255, 0.25);
 }
 
 .about h1{
@@ -248,8 +247,8 @@ nav{
     text-align: center;
     z-index: 1;
     bottom: 0em;
-    left: 5em;
-    right: 5em;
+    left: 2em;
+    right: 2em;
     color: white;
     background: rgba(0, 0, 0, 0.5);
     padding-bottom: 1.5em;
